Finalize Page Using Bootstrap 5

--- a/index.html
+++ b/index.html
@@ -138,6 +138,355 @@
         </div>
       </div>
     </div>
+    <div class="our-work text-center pt-5 pb-5">
+      <div class="container">
+        <div class="main-title mt-5 mb-5 position-relative">
+          <img class="mb-4" src="imgs/title.png" alt="Title" />
+          <h2>We Make This</h2>
+          <p class="text-black-50 text-uppercase">Prepare To Be Amazed</p>
+        </div>
+        <ul class="list-unstyled d-flex justify-content-center mt-5 mb-5">
+          <li class="active rounded-pill">All</li>
+          <li>Design</li>
+          <li>Code</li>
+          <li>Photo</li>
+          <li>App</li>
+        </ul>
+        <div class="row">
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="Application">
+              <img src="imgs/work-01.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="Application">
+              <img src="imgs/work-02.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="Application">
+              <img src="imgs/work-03.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="Application">
+              <img src="imgs/work-04.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="Application">
+              <img src="imgs/work-05.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="Application">
+              <img src="imgs/work-06.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="Application">
+              <img src="imgs/work-07.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="Application">
+              <img src="imgs/work-08.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+          <a class="btn rounded-pill main-btn text-uppercase" href=""
+            >I Want More</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="stuff pt-5">
+      <div class="container">
+        <div class="main-title text-center mt-5 mb-5 position-relative">
+          <img class="mb-4" src="imgs/title.png" alt="Title" />
+          <h2>Some Stuff About Us</h2>
+          <p class="text-black-50 text-uppercase">The Great Team</p>
+        </div>
+        <p class="description text-center mb-5 text-black-50 m-auto">
+          Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
+          ligula porta felis euismod semper. Praesent commodo cursus magna, vel
+          scelerisque nisl consectetur et. Nullam id dolor id nibh ultricies
+          vehicula ut id elit. Cras mattis consectetur purus sit amet fermentum.
+          Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
+          ligula porta felis euismod semper. Praesent commodo cursus magna, vel
+          scelerisque nisl consectetur et. Nullam id dolor id nibh ultricies
+          vehicula ut id elit. Cras mattis consectetur purus sit amet fermentum.
+        </p>
+        <div class="row align-items-center">
+          <div class="col-lg-4 mb-4 text-center text-md-start">
+            <div class="text">
+              <h4>Retina Design</h4>
+              <p class="text-black-50 fs-6">
+                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum
+                id ligula porta felis euismod semper. Praesent commodo cursus
+                magna, vel scelerisque nisl consectetur et. Nullam id dolor id
+                nibh ultricies vehicula ut id elit. Cras mattis consectetur
+                purus sit amet fermentum.
+              </p>
+              <p class="text-black-50 fs-6">
+                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum
+                id ligula porta felis euismod semper. Praesent commodo cursus
+                magna, vel scelerisque nisl consectetur et. Nullam id dolor id
+                nibh ultricies vehicula ut id elit. Cras mattis consectetur
+                purus sit amet fermentum.
+              </p>
+              <a class="btn rounded-pill main-btn text-uppercase" href=""
+                >Order Me One</a
+              >
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <img class="img-fluid" src="imgs/laptop.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="team text-center pb-5 pt-5">
+      <div class="container pb-5 pt-5">
+        <h2 class="fw-bold">Meet The Team</h2>
+        <p class="text-black-50 mb-5">
+          This is a sample long text. It is used to demonstrate how the layout
+          handles longer content. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Sed euismod, nisl ac lacinia tincidunt, justo nunc
+          lacinia mauris, id lacinia mauris nunc id justo. Nulla facilisi. Sed
+          id nunc nec nunc tincidunt rutrum. Nulla facilisi. Sed id nunc nec
+          nunc tincidunt rutrum.
+        </p>
+        <div class="row">
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img src="imgs/team-1.png" alt="" class="img-fluid" />
+              <h4 class="p-3 text-light">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                "I don't understand how we got by those troops. I thought we
+                were dead."
+              </blockquote>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img src="imgs/team-2.png" alt="" class="img-fluid" />
+              <h4 class="p-3 text-light">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                "I don't understand how we got by those troops. I thought we
+                were dead."
+              </blockquote>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img src="imgs/team-3.png" alt="" class="img-fluid" />
+              <h4 class="p-3 text-light">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                "I don't understand how we got by those troops. I thought we
+                were dead."
+              </blockquote>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img src="imgs/team-4.png" alt="" class="img-fluid" />
+              <h4 class="p-3 text-light">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                "I don't understand how we got by those troops. I thought we
+                were dead."
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="techs pt-5 pb-5 text-center">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img class="img-fluid" src="imgs/tech-1.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img class="img-fluid" src="imgs/tech-2.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img class="img-fluid" src="imgs/tech-3.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img class="img-fluid" src="imgs/tech-4.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img class="img-fluid" src="imgs/tech-1.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img class="img-fluid" src="imgs/tech-2.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="project text-center text-light pt-5 pb-5">
+      <h2>Start Your Project Now</h2>
+      <p class="text-white-50">
+        Leave your description and we start the engine. Don't worry, you can
+        cancel anytime
+      </p>
+      <div class="d-flex justify-content-center mt-5">
+        <a class="btn rounded-pill main-btn text-uppercase" href=""
+          >Start Project</a
+        >
+      </div>
+    </div>
+    <div class="blog pt-5 pb-5">
+      <div class="container">
+        <div class="main-title mt-5 mb-5 position-relative text-center">
+          <img class="mb-4" src="imgs/title.png" alt="Title" />
+          <h2>Read Our Blog</h2>
+          <p class="text-black-50 text-uppercase">New Stories</p>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <div class="card">
+              <img class="card-img-top" src="imgs/blog-1.jpg" alt="" />
+              <div class="card-body">
+                <span class="text-black-50">Jan 17, 2022</span>
+                <h5 class="card-title">Some Awesome Blog Title Here</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="card">
+              <img class="card-img-top" src="imgs/blog-2.jpg" alt="" />
+              <div class="card-body">
+                <span class="text-black-50">Jan 17, 2022</span>
+                <h5 class="card-title">Some Awesome Blog Title Here</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="card">
+              <img class="card-img-top" src="imgs/blog-3.jpg" alt="" />
+              <div class="card-body">
+                <span class="text-black-50">Jan 17, 2022</span>
+                <h5 class="card-title">Some Awesome Blog Title Here</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+          <a class="btn rounded-pill main-btn text-uppercase" href=""
+            >More Stories</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="subscribe pt-5 pb-5 text-center text-md-start">
+      <div class="container">
+        <form class="row align-items-center">
+          <div class="col-md-6 col-lg-3">
+            <div class="fw-bold fs-5">Subscribe to our Newsletter:</div>
+          </div>
+          <div class="col-md-6 col-lg-7 mb-sm-5 mb-md-0">
+            <input
+              class="w-100 text-light p-2 bg-transparent"
+              type="text"
+              placeholder="Enter Email Address"
+            />
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <input class="btn rounded-pill" type="submit" value="Subscribe" />
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="footer pt-5 pb-5 text-center text-white-50 text-md-start">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="info mb-5">
+              <img class="mb-4" src="imgs/logo.png" alt="" />
+              <p class="mb-5">
+                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum
+                id ligula porta felis euismod semper. Praesent commodo cursus
+                magna, vel scelerisque nisl consectetur et.
+              </p>
+              <div class="copyright">
+                Created By <span>Graphberry</span>
+                <div>&copy; 2024 - <span>Bondi Inc.</span></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <div class="links">
+              <h5 class="text-light">Links</h5>
+              <ul class="list-unstyled lh-lg">
+                <li>Home</li>
+                <li>Our Services</li>
+                <li>Portfolio</li>
+                <li>Testimonials</li>
+                <li>Support</li>
+                <li>Terms and Conditions</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <div class="links">
+              <h5 class="text-light">About Us</h5>
+              <ul class="list-unstyled lh-lg">
+                <li>Sign In</li>
+                <li>Register</li>
+                <li>About Us</li>
+                <li>Blog</li>
+                <li>Contact Us</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="contact">
+              <h5 class="text-light">Contact Us</h5>
+              <p class="lh-lg mt-3 mb-5">
+                Get in touch with us via mail phone. We are wating for your call
+                or message
+              </p>
+              <a href="" class="btn rounded-pill w-100 main-btn"
+                >graphberry@gmail.com</a
+              >
+              <ul class="d-flex mt-5 list-unstyled gap-3">
+                <li>
+                  <a class="d-block text-light" href="">
+                    <i
+                      class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a class="d-block text-light" href="">
+                    <i
+                      class="fa-brands fa-twitter fa-lg twitter rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a class="d-block text-light" href="">
+                    <i
+                      class="fa-brands fa-instagram fa-lg instagram rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a class="d-block text-light" href="">
+                    <i
+                      class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Content End -->
     <!-- Scripts Imports -->
     <script src="js/bootstrap.bundle.min.js"></script>
